MongoDB 설정 추가 및 서버 포트 변경
application.yaml 파일에 MongoDB 설정을 추가하고, 서버 포트를 8081로 변경했습니다.

- application.yaml 파일에 server.port 설정을 추가했습니다.
- mongodb.url을 mongodb://192.168.0.17:27017로 수정했습니다.
- mongodb.database 설정을 demo로 추가했습니다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,9 @@
+server:
+    port: 8081
 spring:
     application:
         name: cart
 
 mongodb:
-    url: mongodb://localhost:27017/cart
+    url: mongodb://192.168.0.17:27017
     database: demo
